projects/vb6parse/snapshots/syntax/statements/control_flow/resume/resume_with_select_case.snap
---
source: projects/vb6parse/src/syntax/statements/control_flow/resume.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: OnErrorStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: OnKeyword
                  text: "On"
                - kind: Whitespace
                  text: " "
                - kind: ErrorKeyword
                  text: Error
                - kind: Whitespace
                  text: " "
                - kind: GotoKeyword
                  text: GoTo
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: ErrorHandler
                - kind: Newline
                  text: "\n"
            - kind: ExitStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ExitKeyword
                  text: Exit
                - kind: Whitespace
                  text: " "
                - kind: SubKeyword
                  text: Sub
            - kind: Newline
              text: "\n"
            - kind: LabelStatement
              children:
                - kind: Identifier
                  text: ErrorHandler
                - kind: ColonOperator
                  text: ":"
                - kind: Newline
                  text: "\n"
            - kind: SelectCaseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SelectKeyword
                  text: Select
                - kind: Whitespace
                  text: " "
                - kind: CaseKeyword
                  text: Case
                - kind: Whitespace
                  text: " "
                - kind: MemberAccessExpression
                  children:
                    - kind: Identifier
                      text: Err
                    - kind: PeriodOperator
                      text: "."
                    - kind: Identifier
                      text: Number
                - kind: Newline
                  text: "\n"
                - kind: Whitespace
                  text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: IntegerLiteral
                      text: "5"
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: ResumeStatement
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: ResumeKeyword
                              text: Resume
                            - kind: Whitespace
                              text: " "
                            - kind: NextKeyword
                              text: Next
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: IntegerLiteral
                      text: "11"
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: ResumeStatement
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: ResumeKeyword
                              text: Resume
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "        "
                - kind: CaseElseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: ElseKeyword
                      text: Else
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: ResumeStatement
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: ResumeKeyword
                              text: Resume
                            - kind: Whitespace
                              text: " "
                            - kind: Identifier
                              text: CleanUp
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: SelectKeyword
                  text: Select
                - kind: Newline
                  text: "\n"
            - kind: LabelStatement
              children:
                - kind: Identifier
                  text: CleanUp
                - kind: ColonOperator
                  text: ":"
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: EndOfLineComment
              text: "' Cleanup"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
